# Notebooks-to-Packages

./: .gitignore  LICENSE  README.md  environment.yml  predicting-ufo-sightings.ipynb
1-Notebooks/: README.md  predicting-ufo-sightings.ipynb  predicting-ufo-sightings_start.ipynb
2-Scripts/: A_predicting-ufo-sightings.py  B_predicting-ufo-sightings.py  C_predicting-ufo-sightings.py  README.md  predicting-ufo-sightings.txt
3-Packages/: README.md
3-Packages/PredUFO/: pyproject.toml
3-Packages/PredUFO/demos/: predicting-ufo-sightings.ipynb
3-Packages/PredUFO/predufo/: __init__.py  command_line.py  data.py  plot.py  predict.py  utils.py
4-Classes/: README.md
4-Classes/A_PredUFO/: pyproject.toml
4-Classes/A_PredUFO/predufo/: __init__.py  command_line.py  sightings.py
4-Classes/B_PredUFO/: pyproject.toml
4-Classes/B_PredUFO/predufo/: __init__.py  command_line.py  data.py  sightings.py
4-Classes/PredUFO/predufo/: command_line.py  sightings.py
