[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PredUFO"
version = "0.0.1-a0"
authors = [
    { name="Michal Grzadkowski", email="mgrzad@princeton.edu" },
    ]
description = "predicting UFO sightings"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

[project.urls]
"Homepage" = "https://github.com/michal-g/Notebooks-to-Packages"

[project.scripts]
predUFO-USA = "predufo.command_line:predict_usa"
