[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PredUFO"
version = "2.0.0-a0"
authors = [
    { name="Michal Grzadkowski", email="mgrzad@princeton.edu" },
    ]
description = "predicting UFO sightings"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

dependencies = ["pandas", "plotly", "jupyter", "imageio", "matplotlib",
                "scikit-learn<1.1", "nbconvert", "nbformat"]

[project.urls]
"Homepage" = "https://github.com/michal-g/Notebooks-to-Packages"

[project.scripts]
predUFO-USA = "predufo.command_line:predict_usa"
predUFO-Canada = "predufo.command_line:predict_canada"

[tool.setuptools]
packages = ["predufo"]

[tool.setuptools.package-data]
"*" = ["*.csv"]
